@@ -196,6 +196,7 @@ fixed bugs:
 - fixed bug in changing quadratic coefficients of a row in the NLP
 - fixed bug caused by not (correctly) counting boundchanges in cons_varbound.c
 - fixed three bugs when writing in fzn format (wrongly splitted writing buffer, wrong variables was used, floats were printed to short)
+- fixed removal of fixed linear variables from a nonlinear row: a fixed variable may have not been removed if there was also a multiaggregated variable
 
 performance improvements:
 - fasten propagation in cons_knapsack.c due to negated clique partitions
